[2738] Added whole funcionalities. Data read from xml.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -20,7 +20,6 @@ versions = versions
 
 [versions]
 
-
 [server]
 host = 0.0.0.0
 logfiles = ${buildout:directory}/var/log
@@ -35,6 +34,7 @@ eggs =
     PasteDeploy
     Mako
     Flask-Mako
+    lxml
 
 interpreter = python-console
 
@@ -73,6 +73,8 @@ input = inline:
     # Deployment configuration
     DEBUG = False
     DATA_CSV = "${buildout:directory}/runtime/data/sample_data.csv"
+    DATA_XML = "${buildout:directory}/src/presence_analyzer/users.xml"
+    DATA_XML_URL = "http://sargo.bolt.stxnext.pl/users.xml"
 
 output = ${buildout:parts-directory}/etc/deploy.cfg
 
@@ -83,6 +85,8 @@ input = inline:
     # Debugging configuration
     DEBUG = True
     DATA_CSV = "${buildout:directory}/runtime/data/sample_data.csv"
+    DATA_XML = "${buildout:directory}/src/presence_analyzer/users.xml"
+    DATA_XML_URL = "http://sargo.bolt.stxnext.pl/users.xml"
 
 output = ${buildout:parts-directory}/etc/debug.cfg
 
@@ -107,6 +111,7 @@ recipe = zc.recipe.egg
 eggs =
     pylint
     presence_analyzer
+    lxml
 scripts = pylint
 entry-points = pylint=pylint.lint:Run
 dirs = ['${buildout:directory}/src/presence_analyzer']
